--- a/clusters/kind-kind/8-demo-kustomization-git-bb-app.yml
+++ b/clusters/kind-kind/8-demo-kustomization-git-bb-app.yml
@@ -6,7 +6,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 1m40s
-  path: ./bb-app-source/manifests
+  path: ./manifests
   prune: true
   sourceRef:
     kind: GitRepository
